<resources>
    <string name="app_name">Karsanime</string>

    <!--    Drawer Teks -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--    Menu    -->

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_anime">Anime</string>
    <string name="menu_manga">Manga</string>
    <string name="menu_people">People</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_character">Character</string>

    <!--    App Teks    -->

    <string name="something_wrong">Something Wrong!</string>
    <string name="data_not_found">Data not found!</string>
    <string name="search">Search</string>
    <string name="what_you_are_looking_for">What you are looking for?</string>
    <string name="find_your_favorite_anime_between_more_than_10_000_anime">Find your favorite Anime Between more Than 10,000 Anime</string>
    <string name="see_all"><![CDATA[See all >]]></string>

    <string name="error_anime_synopsis">this anime dont have synopsis yet</string>
    <string name="error_status">Unknown status</string>

    <string name="upcoming_anime">Upcoming Anime</string>
    <string name="this_season">This Season</string>
    <string name="top_anime">Top Anime</string>
    <string name="top_manga">Top Manga</string>
    <string name="top_people">Top People</string>
    <string name="top_character">Top Character</string>

    <string name="anime">Anime</string>
    <string name="manga">Manga</string>
    <string name="people">People</string>
    <string name="character">Character</string>

    <string name="see_full_detail">See full detail</string>
    <string name="retry">Retry</string>
    <string name="favorite_title">My Favorite</string>
    <string name="empty_favorite">You don\'t have any favorite yet</string>

    <string name="statistic">Statistic</string>
    <string name="watching">Watching</string>
    <string name="completed">Completed</string>
    <string name="on_hold">On hold</string>
    <string name="dropped">Dropped</string>
    <string name="plan_to_watch">Plan to watch</string>

    <string name="text_info_title">Title</string>
    <string name="text_info_title_english">Title English</string>
    <string name="text_info_title_japanese">Title Japanese</string>
    <string name="text_info_source">Source</string>
    <string name="text_info_episodes">Episodes</string>
    <string name="text_info_airing">Airing</string>
    <string name="text_info_airing_from">Airing from</string>
    <string name="text_info_airing_to">Airing to</string>
    <string name="text_info_duration">Duration</string>
    <string name="text_info_score">Score</string>

    <string name="more_info">More info</string>
    <string name="text_info_broadcast">Broadcast</string>
    <string name="trailer">Trailer</string>
    <string name="theme">Theme</string>
    <string name="sample_theme">1: again by YUI (eps 1-14)</string>
    <string name="external">External</string>
    <string name="openings">Openings</string>
    <string name="endings">Endings</string>
    <string name="streaming">Streaming</string>
    <string name="recommendations">Recommendations</string>
    <string name="synopsis">Synopsis</string>


    <!--    Image Description   -->

    <string name="desc_apps_logo">Apps logo</string>
    <string name="desc_back_button_from_detail_image">Back button from detail image</string>
    <string name="desc_detail_full_image">Detail full image</string>
    <string name="desc_button_favorite">button favorite</string>
    <string name="desc_image_poster_anime">image poster anime</string>
    <string name="desc_image_thumbnail_anime">Image Thumbnail Anime</string>

    <!--    Sample     -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_title">Tate no Yuusha no Nariagari Season 3</string>
    <string name="sample_rating">PG-13 - Teens 13 or older</string>
    <string name="sample_type">TV</string>
    <string name="sample_year">2022</string>
    <string name="simple_season">Fall</string>
    <string name="sample_airing">Airing from Apr 5, 2009 to Jul 4, 2010</string>
    <string name="sample_description">After a horrific alchemy experiment goes wrong in the Elric household, brothers Edward and Alphonse are left in a catastrophic new reality. Ignoring the alchemical principle banning human transmutation, the boys attempted to bring their recently deceased mother back to life. Instead, they suffered brutal personal loss: Alphonse\'s body disintegrated while Edward lost a leg and then sacrificed an arm to keep Alphonse\'s soul in the physical realm by binding it to a hulking suit of armor.\n\nThe brothers are rescued by their neighbor Pinako Rockbell and her granddaughter Winry. Known as a bio-mechanical engineering prodigy, Winry creates prosthetic limbs for Edward by utilizing \\</string>
    <string name="sample_ranking">#20</string>
    <string name="sample_popularity">2415</string>
    <string name="sample_member">67584</string>
    <string name="sample_favorites">21341</string>
    <string name="sample_title_english">Fullmetal Alchemist: Brotherhood</string>
    <string name="sample_title_japanese">鋼の錬金術師 FULLMETAL ALCHEMIST</string>
    <string name="sample_source">Manga</string>
    <string name="sample_episodes">64 episodes</string>
    <string name="sample_info_airing">currently not airing</string>
    <string name="sample_airing_from">Mei 5, 2009</string>
    <string name="sample_airing_to">Jul 4, 2010</string>
    <string name="sample_duration">24 min per episodes</string>
    <string name="sample_info_score">9.1 (2034175)</string>

    <string name="title_activity_statistic">ActivityStatistic</string>

    <!--    Placeholder     -->

    <string name="format_statistic">%1$s (%2$s)</string>
    <string name="empty_string">This anime don\'t have any %1$s yet</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="recommended">Recommended</string>
    <string name="show_less">Show Less</string>
    <string name="read_more">Read More</string>

    <string name="anime_pictures">Anime Pictures</string>
    <string name="anime_news">Anime News</string>
    <string name="anime_reviews">Anime Reviews</string>
    <string name="anime_character">Anime Character</string>
    <string name="anime_episodes">Anime Episodes</string>
    <string name="DOWNLOAD_STATUS_FAILED">Download has been failed, please try again</string>
    <string name="DOWNLOAD_STATUS_PAUSED">Paused</string>
    <string name="DOWNLOAD_STATUS_PENDING">Pending</string>
    <string name="DOWNLOAD_STATUS_RUNNING">Downloading...</string>
    <string name="DOWNLOAD_STATUS_ELSE">There\'s nothing to download</string>


</resources>