<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_anime"
            android:icon="@drawable/ic_menu_anime"
            android:title="@string/menu_anime" />
        <item
            android:id="@+id/nav_manga"
            android:icon="@drawable/ic_menu_manga"
            android:title="@string/menu_manga" />
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/ic_menu_people"
            android:title="@string/menu_people" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/menu_setting" />
    </group>
</menu>
