<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/activity_full_detail_anime">

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@color/shimmer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_more_info"
        style="@style/description_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/more_info"
        android:textAlignment="textStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1" />

    <ImageView
        android:id="@+id/toggle_more_info"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        android:src="@drawable/ic_arrow_up"
        app:layout_constraintBottom_toBottomOf="@id/text_more_info"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_more_info" />

    <LinearLayout
        android:id="@+id/layout_text_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="@id/text_more_info"
        app:layout_constraintTop_toBottomOf="@id/text_more_info">

        <TextView
            android:id="@+id/text_info_title"
            style="@style/description_bold_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_info_title" />

        <TextView
            android:id="@+id/text_info_title_english"
            style="@style/description_bold_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:text="@string/text_info_title_english" />

        <TextView
            android:id="@+id/text_info_title_japanese"
            style="@style/description_bold_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:text="@string/text_info_title_japanese" />

        <TextView
            android:id="@+id/text_info_source"
            style="@style/description_bold_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:text="@string/text_info_source" />

        <TextView
            android:id="@+id/text_info_episodes"
            style="@style/description_bold_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:text="@string/text_info_episodes" />

        <TextView
            android:id="@+id/text_info_airing"
            style="@style/description_bold_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:text="@string/text_info_airing" />

        <TextView
            android:id="@+id/text_info_airing_from"
            style="@style/description_bold_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:text="@string/text_info_airing_from" />

        <TextView
            android:id="@+id/text_info_airing_to"
            style="@style/description_bold_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:text="@string/text_info_airing_to" />

        <TextView
            android:id="@+id/text_info_duration"
            style="@style/description_bold_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:text="@string/text_info_duration" />

        <TextView
            android:id="@+id/text_info_broadcast"
            style="@style/description_bold_secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:text="@string/text_info_broadcast" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toRightOf="@id/layout_text_info"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/layout_text_info">

        <TextView
            android:id="@+id/info_title"
            style="@style/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1" />

        <TextView
            android:id="@+id/info_title_english"
            style="@style/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:ellipsize="end"
            android:maxLines="1" />

        <TextView
            android:id="@+id/info_title_japanese"
            style="@style/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:ellipsize="end"
            android:maxLines="1" />

        <TextView
            android:id="@+id/info_source"
            style="@style/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:ellipsize="end"
            android:maxLines="1" />

        <TextView
            android:id="@+id/info_episodes"
            style="@style/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:ellipsize="end"
            android:maxLines="1" />

        <TextView
            android:id="@+id/info_airing"
            style="@style/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:ellipsize="end"
            android:maxLines="1" />

        <TextView
            android:id="@+id/info_airing_from"
            style="@style/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:ellipsize="end"
            android:maxLines="1" />

        <TextView
            android:id="@+id/info_airing_to"
            style="@style/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:ellipsize="end"
            android:maxLines="1" />

        <TextView
            android:id="@+id/info_duration"
            style="@style/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:ellipsize="end"
            android:maxLines="1" />

        <TextView
            android:id="@+id/info_broadcast"
            style="@style/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:ellipsize="end"
            android:maxLines="1" />

    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@color/shimmer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_info" />

    <TextView
        android:id="@+id/text_trailer"
        style="@style/description_bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/trailer"
        android:textAlignment="textStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2" />

    <ImageView
        android:id="@+id/toggle_trailer"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintBottom_toBottomOf="@id/text_trailer"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_trailer" />

    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/youtube_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:visibility="gone"
        app:autoPlay="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_trailer" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@color/shimmer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/youtube_player" />

    <TextView
        android:id="@+id/text_theme"
        style="@style/description_bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/theme"
        android:textAlignment="textStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view3" />

    <ImageView
        android:id="@+id/toggle_theme"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintBottom_toBottomOf="@id/text_theme"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_theme" />


    <TextView
        android:id="@+id/text_theme_openings"
        style="@style/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/openings"
        android:textAlignment="textStart"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_theme" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_openings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/text_theme_openings" />

    <TextView
        android:id="@+id/text_theme_endings"
        style="@style/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/endings"
        android:textAlignment="textStart"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_openings" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_endings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/text_theme_endings" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@color/shimmer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_endings" />

    <TextView
        android:id="@+id/text_external"
        style="@style/description_bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/external"
        android:textAlignment="textStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view4" />

    <ImageView
        android:id="@+id/toggle_external"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintBottom_toBottomOf="@id/text_external"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_external" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_external"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/text_external" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@color/shimmer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_external" />

    <TextView
        android:id="@+id/text_streaming"
        style="@style/description_bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/streaming"
        android:textAlignment="textStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view5" />

    <ImageView
        android:id="@+id/toggle_streaming"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintBottom_toBottomOf="@id/text_streaming"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_streaming" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_streaming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/text_streaming" />

    <View
        android:id="@+id/view6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@color/shimmer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_streaming" />

    <TextView
        android:id="@+id/text_recommendation"
        style="@style/description_bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:text="@string/recommendations"
        android:textAlignment="textStart"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view6" />

    <ImageView
        android:id="@+id/toggle_recommendation"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="@dimen/dimen_24dp"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintBottom_toBottomOf="@id/text_recommendation"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_recommendation" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recommendation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/text_recommendation" />

    <View
        android:id="@+id/view7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:background="@color/shimmer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_recommendation" />

</androidx.constraintlayout.widget.ConstraintLayout>