<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_8dp"
    android:backgroundTint="?attr/colorSurface"
    app:cardCornerRadius="12dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_image_people"
            android:layout_width="@dimen/dimen_48dp"
            android:layout_height="@dimen/dimen_48dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:src="@drawable/sample_profile"
            app:civ_border_color="?attr/colorAccent"
            app:civ_border_width="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        
        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_title"
            style="@style/description_bold"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            app:layout_constraintTop_toTopOf="@id/civ_image_people"
            app:layout_constraintLeft_toRightOf="@id/civ_image_people"
            app:layout_constraintRight_toRightOf="parent"/>

        <ImageView
            android:id="@+id/icon_star"
            android:layout_width="@dimen/dimen_24dp"
            android:layout_height="@dimen/dimen_24dp"
            android:src="@drawable/ic_star"
            app:layout_constraintLeft_toLeftOf="@id/name"
            app:layout_constraintTop_toBottomOf="@id/name"/>

        <TextView
            android:id="@+id/tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recommended"
            android:layout_marginStart="@dimen/dimen_4dp"
            style="@style/description_bold"
            app:layout_constraintTop_toTopOf="@id/icon_star"
            app:layout_constraintBottom_toBottomOf="@id/icon_star"
            app:layout_constraintLeft_toRightOf="@id/icon_star"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:maxLines="5"
            android:ellipsize="end"
            style="@style/description"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/civ_image_people"/>

        <ImageView
            android:id="@+id/reaction"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_thumb_up"
            android:layout_marginVertical="@dimen/dimen_16dp"
            app:layout_constraintLeft_toLeftOf="@id/date"
            app:layout_constraintTop_toBottomOf="@id/date"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/overall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_favorites"
            style="@style/description"
            android:layout_marginStart="@dimen/dimen_8dp"
            app:layout_constraintTop_toTopOf="@id/reaction"
            app:layout_constraintBottom_toBottomOf="@id/reaction"
            app:layout_constraintLeft_toRightOf="@id/reaction"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_airing_to"
            style="@style/description"
            app:layout_constraintTop_toTopOf="@id/layout_read_more"
            app:layout_constraintBottom_toBottomOf="@id/layout_read_more"
            app:layout_constraintLeft_toLeftOf="@id/review"/>

        <LinearLayout
            android:id="@+id/layout_read_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/review">

            <TextView
                android:id="@+id/read_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Read more"
                android:layout_gravity="center"
                style="@style/description"/>

            <ImageView
                android:id="@+id/iv_read_more"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_arrow_down"/>



        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.cardview.widget.CardView>

